# sf_cpp_hackatone1

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Client.cpp  Client.sln  Client.vcxproj  Client.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Client/: Client.sln  Client.vcxproj  Client.vcxproj.filters  chatData  requestsToServer.cpp  requestsToServer.h  userData
include/: Actions.h  AdapterInterAction.h  Channel.h  EchoUser.h  InterActionConsole.h  LoginData.h  Messages.h  Receiver.h  Sender.h  Users.h
src/: Actions.cpp  AdapterInterAction.cpp  Channel.cpp  EchoUser.cpp  InterActionConsole.cpp  LoginData.cpp  Messages.cpp  Receiver.cpp  Sender.cpp  Users.cpp
